generated/checkers/gen/AllGen-Misuse-ec1aae190c7729ffdd3603de311dc00f7ff988f9/build_logs/syntax-repair-04/build_stderr_4.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘const clang::Expr* {anonymous}::getCountedByExprCompat(const clang::CountedByAttr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:48:36: error: no matching function for call to ‘getCountedByExprCompatImpl(const clang::CountedByAttr*&, int)’
   48 |   return getCountedByExprCompatImpl(A, 0);
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:33:13: note: candidate: ‘template<class T> decltype ((A->getCountedBy(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, int)’
   33 | static auto getCountedByExprCompatImpl(const T *A, int)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:33:13: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In substitution of ‘template<class T> decltype ((A->getCountedBy(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, int) [with T = clang::CountedByAttr]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:48:36:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:34:20: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedBy’; did you mean ‘AT_CountedBy’?
   34 |     -> decltype(A->getCountedBy(), static_cast<const Expr *>(nullptr)) {
      |                 ~~~^~~~~~~~~~~~
      |                 AT_CountedBy
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:38:13: note: candidate: ‘template<class T> decltype ((A->getCountedByExpr(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, long int)’
   38 | static auto getCountedByExprCompatImpl(const T *A, long)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:38:13: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In substitution of ‘template<class T> decltype ((A->getCountedByExpr(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, long int) [with T = clang::CountedByAttr]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:48:36:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:39:20: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedByExpr’; did you mean ‘getCountedByField’?
   39 |     -> decltype(A->getCountedByExpr(), static_cast<const Expr *>(nullptr)) {
      |                 ~~~^~~~~~~~~~~~~~~~
      |                 getCountedByField
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:43:13: note: candidate: ‘template<class T> decltype ((A->getExpr(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, double)’
   43 | static auto getCountedByExprCompatImpl(const T *A, double)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:43:13: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In substitution of ‘template<class T> decltype ((A->getExpr(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, double) [with T = clang::CountedByAttr]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:48:36:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:44:20: error: ‘const class clang::CountedByAttr’ has no member named ‘getExpr’
   44 |     -> decltype(A->getExpr(), static_cast<const Expr *>(nullptr)) {
      |                 ~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:183:6: warning: ‘static bool {anonymous}::SAGenTestChecker::recordHasCountedByFlexArray(const clang::RecordDecl*)’ defined but not used [-Wunused-function]
  183 | bool SAGenTestChecker::recordHasCountedByFlexArray(const RecordDecl *RD) {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
